Prevent git CVE-2024-32002
According to [CVE-2024-32002][CVE] `git` versions below `2.39.4` should
be protected by this global config. Note that this change could be
reverted after upgrading git to appropriate (latest) version.

[CVE]: https://nvd.nist.gov/vuln/detail/CVE-2024-32002

--- a/.config/git/config
+++ b/.config/git/config
@@ -10,6 +10,8 @@
 	autocrlf = input
 	safecrlf = true
 	pager = delta
+	# prevent CVE-2024-32002 (fixed in v2.39.4 and above)
+	symlinks = false
 [interactive]
 	diffFilter = delta --diff-so-fancy
 [delta]
